# linuxdeploy-plugin-qt-examples

./: .gitignore  .travis.yml  README.md  build_appimages.sh
QtQuickControls2Application/: CMakeLists.txt  QtQuickControls2Application.desktop
QtWebEngineApplication/: QtWebEngineApplication.desktop  QtWebEngineApplication.pro
QtWidgetsApplication/: QtWidgetsApplication.desktop  QtWidgetsApplication.pro  main.cpp  mainwindow.cpp  mainwindow.ui
QtWidgetsApplication/i18n/: org.appimage.qtwidgetsapplication_es.ts
QtWidgetsApplication/resources/icons/: icons.qrc
